# stock-state-backend

./: Dockerfile  README.md  consumer.Dockerfile  pyproject.toml  requirements.txt  server.sh  web.Dockerfile
stock/: cli.py  consumer.py  wsgi.py
stock/adapters/repositories/: postgres_db.py  shelves_repository.py
stock/adapters/topics/: message_handler.py  receive_handler.py  send_handler.py  shelves_topics.py
stock/app/: deplete_shelve_use_case.py  register_shelve_use_case.py  restock_shelve_use_case.py  retrieve_shelve_use_case.py
stock/core/: product.py  shelve.py
stock/core/errors/: shelve_capacity_exceeded.py  shelve_not_found.py  shelve_understocked.py
stock/core/interfaces/: shelves_repository.py  shelves_topics.py
stock/core/messages/: depleted.py  purchased_product.py  registered_shelve.py  restock_threshhold_reached.py  restocked.py  shelve_restock_required.py
stock/core/services/: add_to_shelve.py  deduct_from_shelve.py  register_shelve.py
tests/test_core_services/: test_add_to_shelve.py  test_deduct_from_shelve.py  test_register_shelve.py
