[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Max Kossatz <mkossatz@redhat.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.19"
psycopg2-binary = "^2.9.1"
python-qpid-proton = "^0.34.0"
click = "^8.0.1"
dataclasses-json = "^0.5.4"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
